# saleTracker

./: .env.development  .gitignore  README.md  SETUP.md  connect-frontend-backend.plan.md  package-lock.json  package.json  staticwebapp.config.json  swa-cli.config.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.production  Dockerfile  README.md  env.template  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dashboard.py  sales.py
backend/app/auth/: __init__.py  swa_auth.py
backend/app/models/: sales.py
backend/app/services/: __init__.py  cosmos_service.py
backend/tests/: __init__.py  test_sales.py
src/: App.js  App.module.css  index.html
src/components/: Dashboard.js  Dashboard.module.css  Login.js  Login.module.css
src/services/: api.js
src/utils/: auth.js
